# stackops

./: .gitignore  README.md
ansible/ha_k8s_onprem_cluster/: 01_change_hostnames.yaml  02_prepare_balancers.yaml  03_install_docker_k8s.yaml  04_install_k8s_binaries.yml  README.md  change_hostnames.yaml  install_balancers.yaml  main.yaml
ansible/ha_k8s_onprem_cluster/render_configs/: haproxy.j2  keepalived.j2
ansible/install_falco/: install_falco.yml
ansible/nfs-k8s/: 01_install_nfs_packages.yaml
ansible/nfs-k8s/render_configs/: exports.j2
argocd/bluegreen/: kustomization.yaml  rollout.yaml  services.yaml
argocd/job_recreate/kustomize/base/: deployment.yaml
argocd/jobs_testing/kustomize/base/: deployment.yaml  job.yaml  kustomization.yaml
argocd/main/: bootstrap.yaml  job_recreate.yaml
glusterfs/: README.md
k8s_homelab/: README.md
k8s_homelab/csi-driver-nfs/: README.md  pvc-nfs-csi-dynamic.yaml
k8s_homelab/monitoring/grafana/: values.yaml
k8s_homelab/monitoring/prometheus/: values.yaml
k8s_homelab/storage/csi-driver-nfs/: storage-class-test.yaml  test-pod-with-pvc.yaml
k8s_homelab/storage/minio/minio/: install_minio_helm.sh  values.yaml
k8s_learnpill/caller/: Dockerfile  script.sh
k8s_learnpill/faulty/: Dockerfile  main.py
k8s_learnpill/hpa/: Dockerfile  main.py
k8s_learnpill/hpa/k8s/: deployment.yaml  hpa.yaml
k8s_learnpill/okapi/: main.py
tapi/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
terraform/ubuntu/: cloud_init.cfg  tf-ubuntu.tf
terraform/utils/: port_scanner.sh
(+1 files in other folders)
