[tool.poetry]
name = "tapi"
version = "0.1.0"
description = "Test API to deploy on K8s"
authors = ["fooser <fooser@protonmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.17.6"
fastapi = "^0.77.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
